syntax = "proto3";

package qcm.msg.filter;

enum FilterType {
  FILTER_TYPE_UNSPECIFIED = 0;
  FILTER_TYPE_TITLE = 1;
  FILTER_TYPE_NAME = 2;
  FILTER_TYPE_TRACK_COUNT = 3;

  FILTER_TYPE_ALBUM_TITLE = 20;
  FILTER_TYPE_ALBUM_ARTIST_ID = 21;
  FILTER_TYPE_ARTIST_ID = 22;
  FILTER_TYPE_ARTIST_NAME = 23;
}

enum StringCondition {
  STRING_CONDITION_UNSPECIFIED = 0;
  STRING_CONDITION_IS = 1;
  STRING_CONDITION_IS_NOT = 2;
  STRING_CONDITION_CONTAINS = 3;
  STRING_CONDITION_CONTAINS_NOT = 4;
}

enum IntCondition {
  INT_CONDITION_UNSPECIFIED = 0;
  INT_CONDITION_EQUAL = 1;
  INT_CONDITION_EQUAL_NOT = 2;
  INT_CONDITION_LESS = 3;
  INT_CONDITION_LESS_EQUAL = 4;
  INT_CONDITION_GREATER = 5;
  INT_CONDITION_GREATER_EQUAL = 6;
}

message TitleFilter {
  string value = 1;
  StringCondition condition = 2;
}

message NameFilter {
  string value = 1;
  StringCondition condition = 2;
}

message AlbumTitleFilter {
  string value = 1;
  StringCondition condition = 2;
}
message ArtistNameFilter {
  string value = 1;
  StringCondition condition = 2;
}
message AlbumArtistIdFilter { int64 value = 1; }
message ArtistIdFilter { int64 value = 1; }

message TrackCountFilter {
  int32 value = 1;
  IntCondition condition = 2;
}

message AlbumFilter {
  FilterType type = 1;
  oneof payload {
    TitleFilter title_filter = 101;
    TrackCountFilter track_filter = 102;
    ArtistNameFilter artist_name_filter = 103;
    ArtistIdFilter artist_id_filter = 104;
    AlbumArtistIdFilter album_artist_id_filter = 105;
  }
}

message ArtistFilter {
  FilterType type = 1;
  oneof payload {
    NameFilter name_filter = 101;
    AlbumTitleFilter album_title_filter = 102;
  }
}